--- a/templates/landingpage.html
+++ b/templates/landingpage.html
@@ -274,28 +274,28 @@ h1{padding:1.2em; text-align:center;}
         <div class="row">
           <div class="col-lg-3 col-sm-6">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="{% static 'images/girl_dp.png' %}" alt="">
+              <img class="img-fluid rounded-circle mb-3" src="{% static 'team/sina.jpg' %}" alt="">
               <h5>Priyanshu K.<strong> [ CEO ] </strong></h5>
               <p class="font-weight-light mb-0">Full Stack Web Developer with Python and Django.</p>
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="{% static 'images/girl_dp.png' %}" alt="">
+              <img class="img-fluid rounded-circle mb-3" src="{% static 'team/balaji.jpg' %}" alt="">
               <h5>Abhinav S.</h5>
               <p class="font-weight-light mb-0">Full Stack Web Developer with bootstrap, PHP based.</p>
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="{% static 'images/girl_dp.png' %}" alt="">
+              <img class="img-fluid rounded-circle mb-3" src="{% static 'team/bhargav.jpg' %}" alt="">
               <h5>Abhinav S.</h5>
               <p class="font-weight-light mb-0">Full Stack Web Developer with bootstrap, PHP based.</p>
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="{% static 'images/girl_dp.png' %}" alt="">
+              <img class="img-fluid rounded-circle mb-3" src="{% static 'team/obed.jpg' %}" alt="">
               <h5>Abhinav S.</h5>
               <p class="font-weight-light mb-0">Full Stack Web Developer with bootstrap, PHP based.</p>
             </div>
