requirements.txt added

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
 
         <div class="jumbotron">
           <h1 class="small">Welcome To <span class="bold">NOVUS</span></h1>
-          <p class="big">More than just a ORGANIZATION</p>
+          <p class="big">More than just an ORGANIZATION</p>
           <a href="#" class="btn btn-banner">Learn More<i class="fa fa-send"></i></a>
         </div>
       </div>
@@ -67,8 +67,8 @@
   <div class="cta-1">
     <div class="container">
       <div class="row text-center white">
-        <h1 class="cta-title">Say Hey to Tempo!!</h1>
-        <p class="cta-sub-title">Full Responsive HTML5 Bootstrap Template.</p>
+        <h1 class="cta-title">Do you curious about novus, lets begin!!</h1>
+        <p class="cta-sub-title">We believe in growing together...</p>
       </div>
     </div>
   </div>
@@ -81,33 +81,33 @@
       <div class="row">
         <div class="page-title text-center">
           <h1>Our Service</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor <br>incididunt ut labore et dolore magna aliqua. </p>
+            <p>Novus is not only an organization, its an emotion of every organization. <br>We are here to help others to grow <b>digitally</b>. </p>
           <hr class="pg-titl-bdr-btm"></hr>
         </div>
         <div class="col-md-4">
           <div class="service-box">
-            <div class="service-icon"><i class="fa fa-picture-o"></i></div>
+            <div class="service-icon"><i class="fa fa-support"></i></div>
             <div class="service-text">
-              <h3>Design</h3>
-              <p> doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.</p>
+              <h3>Organization</h3>
+              <p> This is an organization for the new ones, where they can find their skills and improve them very fast.</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="service-box">
-            <div class="service-icon"><i class="fa fa fa-code"></i></div>
+            <div class="service-icon"><i class="fa fa fa-group"></i></div>
+            <div class="service-text">
+              <h3>Community</h3>
+              <p> Community, that means you will learn about working with other peoples, sharing, learning and contributing with each other.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="service-box">
+            <div class="service-icon"><i class="fa fa-code"></i></div>
             <div class="service-text">
               <h3>Development</h3>
-              <p> doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="service-box">
-            <div class="service-icon"><i class="fa fa-diamond"></i></div>
-            <div class="service-text">
-              <h3>Marketing</h3>
-              <p> doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.</p>
+              <p> here we help to other organizations or companies to grow them digitally by developing <b>Apps</b> and <b>Websites</b> for them.</p>
             </div>
           </div>
         </div>
@@ -150,106 +150,6 @@
             <img src="{% static 'images/portfolio/web2.jpg' %}" alt="">
             <div class="details">
               <h4>Web 2</h4>
-              <span>Alored dono par</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 portfolio-item filter-app">
-          <a href="">
-            <img src="{% static 'img/portfolio/app3.jpg' %}" alt="">
-            <div class="details">
-              <h4>App 3</h4>
-              <span>Alored dono par</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 portfolio-item filter-card">
-          <a href="">
-            <img src="{% static 'img/portfolio/card1.jpg' %}" alt="">
-            <div class="details">
-              <h4>Card 1</h4>
-              <span>Alored dono par</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 portfolio-item filter-card">
-          <a href="">
-            <img src="img/portfolio/card2.jpg" alt="">
-            <div class="details">
-              <h4>Card 2</h4>
-              <span>Alored dono par</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 portfolio-item filter-web">
-          <a href="">
-            <img src="img/portfolio/web3.jpg" alt="">
-            <div class="details">
-              <h4>Web 3</h4>
-              <span>Alored dono par</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 portfolio-item filter-card">
-          <a href="">
-            <img src="img/portfolio/card3.jpg" alt="">
-            <div class="details">
-              <h4>Card 3</h4>
-              <span>Alored dono par</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 portfolio-item filter-app">
-          <a href="">
-            <img src="img/portfolio/app2.jpg" alt="">
-            <div class="details">
-              <h4>App 2</h4>
-              <span>Alored dono par</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
-          <a href="">
-            <img src="img/portfolio/logo1.jpg" alt="">
-            <div class="details">
-              <h4>Logo 1</h4>
-              <span>Alored dono par</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
-          <a href="">
-            <img src="img/portfolio/logo3.jpg" alt="">
-            <div class="details">
-              <h4>Logo 3</h4>
-              <span>Alored dono par</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 portfolio-item filter-web">
-          <a href="">
-            <img src="img/portfolio/web1.jpg" alt="">
-            <div class="details">
-              <h4>Web 1</h4>
-              <span>Alored dono par</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
-          <a href="">
-            <img src="img/portfolio/logo2.jpg" alt="">
-            <div class="details">
-              <h4>Logo 2</h4>
               <span>Alored dono par</span>
             </div>
           </a>
@@ -413,21 +313,21 @@
         <div id="errormessage"></div>
 
         <div class="form-sec">
-          <form action="" method="post" role="form" class="contactForm">
+          <form action="{% url 'send_message' %}" method="post" role="form" class="contactForm" id="contactform">
             <div class="col-md-4 form-group">
-              <input type="text" name="name" class="form-control text-field-box" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+              <input required type="text" name="name" class="form-control text-field-box" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
               <div class="validation"></div>
             </div>
             <div class="col-md-4 form-group">
-              <input type="email" class="form-control text-field-box" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+              <input required type="email" class="form-control text-field-box" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
               <div class="validation"></div>
             </div>
-            <div class="col-md-4 form-group">
-              <input type="text" class="form-control text-field-box" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-              <div class="validation"></div>
-            </div>
+{#            <div class="col-md-4 form-group">#}
+{#              <input type="text" class="form-control text-field-box" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />#}
+{#              <div class="validation"></div>#}
+{#            </div>#}
             <div class="col-md-12 form-group">
-              <textarea class="form-control text-field-box" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+              <textarea required class="form-control text-field-box" id="text" name="text" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
               <div class="validation"></div>
 
               <button class="button-medium" id="contact-submit" type="submit" name="contact">Submit Now</button>
@@ -440,7 +340,8 @@
   <!--CONTACT END-->
 
   <!--FOOTER START-->
-  <footer id="particles-js-2" class="footer section-padding">
+{#  <footer id="particles-js-2" class="footer section-padding">#}
+  <footer class="footer section-padding">
     <div class="container">
       <div class="row">
         <div style="visibility: visible; animation-name: zoomIn;" class="col-sm-12 text-center wow zoomIn">
@@ -478,13 +379,32 @@
   <script src="{% static 'js/slick.min.js' %}"></script>
   <script src="{% static 'js/custom.js' %}"></script>
 
-  <script src="{% static 'js/contactform.js' %}"></script>
+{#  <script src="{% static 'js/contactform.js' %}"></script>#}
   <script src=""></script>
     <script src="{% static 'js/particles.min.js' %}"></script>
     <script src="{% static 'js/particles.js' %}">
         </script>
   <script type="text/javascript" src=""></script>
   <script src=""></script>
+<script>
+    $("#contactform").on('submit', function(e) {
+        e.preventDefault();
+               $.ajax({
+           url:"{% url 'send_message' %}",
+           type:'GET',
+           data:{
+               'name':$('#name').val(),
+               'email':$('#email').val(),
+               'text':$('#text').val(),
+           },
+           dataType: 'json',
+           success:function (data) {
+           alert(data['message']);
+           }
+               });
+
+    });
+</script>
 
 </body>
 
