everything is well

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
   <div class="cta-1">
     <div class="container">
       <div class="row text-center white">
-        <h1 class="cta-title">Do you curious about novus, lets begin!!</h1>
+        <h1 class="cta-title">Inspired by innovation, driven by technology, brought together for a cause!!</h1>
         <p class="cta-sub-title">We believe in growing together...</p>
       </div>
     </div>
@@ -81,7 +81,11 @@
       <div class="row">
         <div class="page-title text-center">
           <h1>Our Service</h1>
-            <p>Novus is not only an organization, its an emotion of every organization. <br>We are here to help others to grow <b>digitally</b>. </p>
+            <p class="w-75" style="font-size: 16px">
+                We at <b>NOVUS</b> strive for a society where everyone is digitally independent. We want to help make India digitally empowered in the field of technology. <br><b>NOVUS</b> offer best-in-class web services, web applications and mobile applications.
+                We provide our services for personnel, community as well as businesses.<br> Our team is committed to provide our customers
+                with reliable services as well as support plans. All that you need to do is reach out to us and our experts will guide you to get your desired products.<br/>
+            </p>
           <hr class="pg-titl-bdr-btm"></hr>
         </div>
         <div class="col-md-4">
@@ -89,7 +93,7 @@
             <div class="service-icon"><i class="fa fa-support"></i></div>
             <div class="service-text">
               <h3>Organization</h3>
-              <p> This is an organization for the new ones, where they can find their skills and improve them very fast.</p>
+              <p>This is a platform for the one's who aspire to serve for the betterment of society through technology. We are proud to claim ourself as the community of such change makers.</p>
             </div>
           </div>
         </div>
@@ -118,8 +122,8 @@
   <div id="portfolio">
     <div class="container">
       <div class="page-title text-center">
-        <h1>Our Privious Works</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor <br>incididunt ut labore et dolore magna aliqua. </p>
+        <h1>Our Previous Works</h1>
+        <p>Novus helped many personnels and businesses to grow our community is determined to bring technology under the reach of every individual. These are the glimpse of some of our work. </p>
         <hr class="pg-titl-bdr-btm"></hr>
       </div>
       <div class="row">
@@ -164,44 +168,46 @@
       <div class="row justify-content-center">
         <div class="page-title text-center">
           <h1>Meet Our Team</h1>
-          <p>We are gamechangers...... </p>
+          <p>We are more than just an organization. </p>
           <hr class="pg-titl-bdr-btm"></hr>
         </div>
       </div>
           <div class="col-md-3 col-sm-4 col-lg-3 col-6">
             <div class="">
-              <a href="https://www.instagram.com/iamverto" class="img">
+              <a href="https://www.instagram.com/_s.u.p.e.r.m.a.n" class="img">
                 <img src="{% static 'team/sina.jpg' %}" class="img-responsive">
               </a>
               <div class="">
-                <h3>Narendra Sina</h3>
-                <p class="">CEO (Novus ORG)</p>
+                <h3>Narendra Sinha</h3>
+                <p class="">CEO</p>
+{#                <p class="">NOVUS</p>#}
                 <p>Follow me:</p>
-{#                <ul class="team-social">#}
-{#                  <li class="blue-dark"><a href="#"><i class="fa fa-facebook"></i></a></li>#}
-{#                  <li class="red"><a href="#"><i class="fa fa-google-plus"></i></a></li>#}
-{#                  <li class="blue-light"><a href="#"><i class="fa fa-twitter"></i></a></li>#}
-{#                  <li class="blue-dark"><a href="#"><i class="fa fa-linkedin"></i></a></li>#}
-{#                </ul>#}
+                <ul class="team-social">
+                  <li class="blue-dark"><a href="https://m.facebook.com/yoyosina"><i class="fa fa-facebook"></i></a></li>
+                  <li class="red"><a href="https://plus.google.com/106604510620120127414"><i class="fa fa-google-plus"></i></a></li>
+                  <li class="blue-dark"><a href="https://www.instagram.com/_s.u.p.e.r.m.a.n/"><i class="fa fa-instagram"></i></a></li>
+                  <li class="blue-dark"><a href="https://www.linkedin.com/in/narendrasinha"><i class="fa fa-linkedin"></i></a></li>
+                </ul>
               </div>
             </div>
           </div>
 
           <div class="col-md-3 col-sm-4 col-lg-3 col-6">
             <div class="">
-              <a href="#" class="img">
+              <a href="https:www.instagram.com/rollno_4" class="img">
                 <img src="{% static 'team/bhargav.jpg' %}" class="img-responsive">
               </a>
               <div class="">
-                <h3>Bhargav</h3>
-                <p class="marb-20">Front End Web Developer</p>
+                <h3>Bhargav Reddy</h3>
+                <p class="marb-20">CCO</p>
                 <p>Follow me:</p>
-{#                <ul class="team-social">#}
-{#                  <li class="blue-dark"><a href="#"><i class="fa fa-facebook"></i></a></li>#}
+                <ul class="team-social">
+                  <li class="blue-dark"><a href="https://www.facebook.com/profile.php?id=100008328341972&ref=content_filter"><i class="fa fa-facebook"></i></a></li>
 {#                  <li class="red"><a href="#"><i class="fa fa-google-plus"></i></a></li>#}
 {#                  <li class="blue-light"><a href="#"><i class="fa fa-twitter"></i></a></li>#}
 {#                  <li class="blue-dark"><a href="#"><i class="fa fa-linkedin"></i></a></li>#}
-{#                </ul>#}
+                  <li class="blue-dark"><a href="https:www.instagram.com/rollno_4"><i class="fa fa-instagram"></i></a></li>
+                </ul>
               </div>
             </div>
           </div>
@@ -212,15 +218,16 @@
                 <img src="{% static 'team/balaji.jpg' %}" class="img-responsive">
               </a>
               <div class="">
-                <h3>Balaji</h3>
-                <p class="marb-20">CFO (Novus ORG)</p>
+                <h3>Balaji Marthi</h3>
+                <p class="marb-20">CFO</p>
                 <p>Follow me:</p>
-{#                <ul class="team-social">#}
-{#                  <li class="blue-dark"><a href="#"><i class="fa fa-facebook"></i></a></li>#}
+                <ul class="team-social">
+                  <li class="blue-dark"><a href="https://m.facebook.com/balajimarthi"><i class="fa fa-facebook"></i></a></li>
 {#                  <li class="red"><a href="#"><i class="fa fa-google-plus"></i></a></li>#}
-{#                  <li class="blue-light"><a href="#"><i class="fa fa-twitter"></i></a></li>#}
-{#                  <li class="blue-dark"><a href="#"><i class="fa fa-linkedin"></i></a></li>#}
-{#                </ul>#}
+                  <li class="blue-light"><a href="https://mobile.twitter.com/balajimarthi"><i class="fa fa-twitter"></i></a></li>
+                  <li class="blue-dark"><a href="https://in.linkedin.com/in/balaji-marthi-325493144"><i class="fa fa-instagram"></i></a></li>
+                  <li class="blue-dark"><a href="https://www.instagram.com/balajimarthi/"><i class="fa fa-linkedin"></i></a></li>
+                </ul>
               </div>
             </div>
           </div>
@@ -228,18 +235,21 @@
           <div class="col-md-3 col-sm-4 col-lg-3 col-6">
             <div class="">
               <div class="img">
-                <img src="{% static 'team/obed.jpg' %}" class="img-responsive">
+                  <a href="https://www.instagram.com/obed_jamir">
+                      <img src="{% static 'team/obed.jpg' %}" class="img-responsive">
+                  </a>
+
               </div>
               <div class="">
                 <h3>Obed Jamir</h3>
-                <p class="marb-20">Mobile App Developer</p>
+                <p class="marb-20">CTO</p>
                 <p>Follow me:</p>
-{#                <ul class="team-social">#}
-{#                  <li class="blue-dark"><a href="#"><i class="fa fa-facebook"></i></a></li>#}
+                <ul class="team-social">
+                  <li class="blue-dark"><a href="https://www.facebook.com/profile.php?id=100002729953239&ref=content_filter"><i class="fa fa-facebook"></i></a></li>
 {#                  <li class="red"><a href="#"><i class="fa fa-google-plus"></i></a></li>#}
 {#                  <li class="blue-light"><a href="#"><i class="fa fa-twitter"></i></a></li>#}
-{#                  <li class="blue-dark"><a href="#"><i class="fa fa-linkedin"></i></a></li>#}
-{#                </ul>#}
+                  <li class="blue-dark"><a href="https://www.instagram.com/obed_jamir"><i class="fa fa-instagram"></i></a></li>
+                </ul>
               </div>
             </div>
           </div>
@@ -251,33 +261,37 @@
               </div>
               <div class="">
                 <h3>Priyanshu Kumar</h3>
-                <p class="marb-20">Full Stack Web Developer</p>
+                <p class="marb-20">Database Head</p>
                 <p>Follow me:</p>
-{#                <ul class="team-social">#}
-{#                  <li class="blue-dark"><a href="#"><i class="fa fa-facebook"></i></a></li>#}
+                <ul class="team-social">
+                  <li class="blue-dark"><a href="https://www.facebook.com/iamverto"><i class="fa fa-facebook"></i></a></li>
 {#                  <li class="red"><a href="#"><i class="fa fa-google-plus"></i></a></li>#}
-{#                  <li class="blue-light"><a href="#"><i class="fa fa-twitter"></i></a></li>#}
-{#                  <li class="blue-dark"><a href="#"><i class="fa fa-linkedin"></i></a></li>#}
-{#                </ul>#}
+                  <li class="blue-light"><a href="https://www.twitter.com/iamverto"><i class="fa fa-twitter"></i></a></li>
+                  <li class="blue-dark"><a href="https://www.instagram.com/iamverto"><i class="fa fa-instagram"></i></a></li>
+                  <li class="blue-dark"><a href="https://www.linkedin.com/in/priyanshu71"><i class="fa fa-linkedin"></i></a></li>
+                </ul>
               </div>
             </div>
           </div>
 
           <div class="col-md-3 col-sm-4 col-lg-3 col-6">
             <div class="">
-              <div class="img">
-                <img src="{% static 'team/dev.png' %}" class="img-responsive">
+
+              <div class="img"> <a href="http://instagram.com/still_fooling_em__">
+                    <img src="{% static 'team/dev.png' %}" class="img-responsive">
+                </a>
+
               </div>
               <div class="">
-                <h3>Dev shrivastava</h3>
-                <p class="marb-20">Management</p>
+                <h3>Dev Shrivastava</h3>
+                <p class="marb-20">COO</p>
                 <p>Follow me:</p>
-{#                <ul class="team-social">#}
+                <ul class="team-social">
 {#                  <li class="blue-dark"><a href="#"><i class="fa fa-facebook"></i></a></li>#}
 {#                  <li class="red"><a href="#"><i class="fa fa-google-plus"></i></a></li>#}
-{#                  <li class="blue-light"><a href="#"><i class="fa fa-twitter"></i></a></li>#}
-{#                  <li class="blue-dark"><a href="#"><i class="fa fa-linkedin"></i></a></li>#}
-{#                </ul>#}
+                  <li class="blue-light"><a href="http://instagram.com/still_fooling_em__"><i class="fa fa-instagram"></i></a></li>
+                  <li class="blue-dark"><a href="http://linkedin.com/devanjan-srivastava-0527b1148"><i class="fa fa-linkedin"></i></a></li>
+                </ul>
               </div>
             </div>
           </div>
@@ -348,10 +362,10 @@
           <h3>Follow Novus on</h3>
           <div class="footer_social">
             <ul>
-              <li><a class="f_facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a class="f_twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a class="f_google" href="#"><i class="fa fa-google-plus"></i></a></li>
-              <li><a class="f_linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
+              <li><a class="f_facebook" href="https://www.facebook.com/Novusorg-2009015882530608/?ref=bookmarks"><i class="fa fa-facebook"></i></a></li>
+              <li><a class="f_twitter" href="https://mobile.twitter.com/Novus66831652"><i class="fa fa-twitter"></i></a></li>
+{#              <li><a class="f_google" href="#"><i class="fa fa-google-plus"></i></a></li>#}
+              <li><a class="f_instagram" href="https://www.instagram.com/novus.org19/"><i class="fa fa-instagram"></i></a></li>
             </ul>
           </div>
         </div>
